# auto-dj

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  prompt.md  turbo.json
apps/workers/: .env.example  Dockerfile  pyproject.toml  requirements.txt  test_transition_validation.py  verify_syntax_hardcut_5.py
apps/workers/prompts/: AUTODJ_BRAIN_PROMPT.md  CHAT_REORDER_PROMPT.md
apps/workers/src/: __init__.py  config.py  main.py
apps/workers/src/analysis/: __init__.py  analyzer.py  bpm.py  camelot.py  energy.py  key.py  mix_points.py  mixability.py  phrase_detector.py  stems.py  structure.py  structure_detector.py  vocal_detector.py
apps/workers/src/energy/: __init__.py  serpentine.py  set_manager.py
apps/workers/src/job_queue/: __init__.py  connection.py  consumer.py  publisher.py
apps/workers/src/llm/: __init__.py  chat_reorder.py  planner.py
apps/workers/src/mixing/: __init__.py  beatmatch.py  draft_transition_generator.py  mix_generator.py  mixer.py  plan_executor.py  stems.py  transition_generator.py  transitions.py
apps/workers/src/mixing/effects/: __init__.py  advanced.py  delay.py  filters.py  reverb.py
apps/workers/src/ordering/: __init__.py  camelot_rules.py  optimizer.py  scoring.py
apps/workers/src/theory/: __init__.py  bpm_reference.py  camelot.py
apps/workers/src/utils/: __init__.py  audio.py  logging.py
apps/workers/tests/: __init__.py  test_bass_swap.py  test_energy_flow.py  test_harmonic.py  test_theory.py  test_transitions.py
docker/: Dockerfile.api  (+3 more)
(+131 files in other folders)
